# uno.cpp

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
art/vd/: back.xml  block.xml  eigth.xml  five.xml  four.xml  logo.xml  nine.xml  one.xml  plus four.xml  plus two.xml  rainbow.xml  reverse.xml  seven.xml  six.xml  three.xml  two.xml  zero.xml
docs/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  add_8hpp.html  add_8hpp.js  add_8hpp_source.html  annotated.html  annotated_dup.js  capi_8h.html  capi_8h.js  capi_8h_source.html  carta_8hpp.html  carta_8hpp.js  carta_8hpp_source.html  carta__especial_8hpp.html  carta__especial_8hpp.js  carta__especial_8hpp_source.html  class_carta-members.html  class_carta.html  class_carta.js  class_carta_especial-members.html  class_carta_especial.html  class_carta_especial.js  class_carta_invalida-members.html  class_carta_invalida.html  class_carta_invalida.js  class_carta_que_vai_ser_deletada-members.html  class_carta_que_vai_ser_deletada.html  class_carta_que_vai_ser_deletada.js  class_excecao_interface-members.html  class_excecao_interface.html  class_excecao_interface.js  class_exception-members.html  class_exception.html  class_exception.js  class_interface-members.html  class_interface.html  class_interface.js  class_jogador-members.html  class_jogador.html  (+325 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_4.js  classes_7.js  classes_9.js  classes_a.js  defines_1.js  defines_2.js  defines_3.js  defines_9.js  defines_b.js  enums_0.js  enums_1.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+41 more)
include/: add.hpp  capi.h  carta.hpp  carta_especial.hpp  data.hpp  interface.hpp  jogador.hpp  mao.hpp  partida.hpp  pilha.hpp  state_machine.hpp  thread_local_state_machine.hpp  threaded_state_machine.hpp  util.hpp
src/: add.cpp  carta.cpp  carta_especial.cpp  data.cpp  interface.cpp  jogador.cpp  main.cpp  mao.cpp  partida.cpp  pilha.cpp  state_machine.cpp  thread_local_state_machine.cpp  threaded_state_machine.cpp  util.cpp
src/include/: data.hpp
test/: add.cpp  carta.cpp  carta_especial.cpp  interface.cpp  jogador.cpp  mao.cpp  partida.cpp  pilha.cpp  util.cpp
