cmake_minimum_required(VERSION 3.23)
project(uno_cpp VERSION 1.0.0 DESCRIPTION "Uma biblioteca do jogo uno")

set(CMAKE_CXX_FLAGS "-Wall -Wconversion -Wextra")
set(CMAKE_CXX_STANDARD 17)

include_directories(include)
include_directories(third_party)
add_executable(main src/main.cpp src/carta.cpp src/carta_especial.cpp src/interface.cpp src/jogador.cpp src/mao.cpp src/partida.cpp src/pilha.cpp src/util.cpp)
add_test(carta carta_test)
add_test(carta_especial carta_especial_test)
add_test(interface interface_test)
add_test(jogador jogador_test)
add_test(mao mao_test)
add_test(partida partida_test)
add_test(pilha pilha_test)
add_test(util util_test)
add_library(uno SHARED src/carta.cpp src/carta_especial.cpp src/interface.cpp src/jogador.cpp src/mao.cpp src/partida.cpp src/pilha.cpp src/util.cpp)
set_target_properties(uno PROPERTIES VERSION ${PROJECT_VERSION})
set_target_properties(uno PROPERTIES SOVERSION ${PROJECT_VERSION})
set_target_properties(uno PROPERTIES PUBLIC_HEADER include/capi.h)