cmake_minimum_required(VERSION 3.23)
project(uno_cpp VERSION 1.0.0 DESCRIPTION "Uma biblioteca do jogo uno")

set(CMAKE_CXX_FLAGS "-Wall -Wconversion -Wextra -Wno-unknown-pragmas -fPIC")
set(CMAKE_CXX_STANDARD 17)

include_directories(include)
include_directories(third_party)
add_executable(carta_test test/carta.cpp src/carta.cpp src/util.cpp)
add_executable(carta_especial_test test/carta_especial.cpp src/carta_especial.cpp src/carta.cpp src/util.cpp)
add_executable(interface_test test/interface.cpp src/interface.cpp src/partida.cpp src/carta.cpp src/carta_especial.cpp src/jogador.cpp src/mao.cpp src/pilha.cpp src/util.cpp)
add_executable(jogador_test test/jogador.cpp src/jogador.cpp src/carta.cpp src/carta_especial.cpp src/mao.cpp src/util.cpp)
add_executable(mao_test test/mao.cpp src/mao.cpp src/carta.cpp src/carta_especial.cpp src/util.cpp)
add_executable(partida_test test/partida.cpp src/partida.cpp src/carta.cpp src/carta_especial.cpp src/jogador.cpp src/mao.cpp src/pilha.cpp src/util.cpp)
add_executable(pilha_test test/pilha.cpp src/pilha.cpp src/carta.cpp src/carta_especial.cpp)
add_executable(util_test test/util.cpp src/util.cpp)
add_test(carta carta_test)
add_test(carta_especial carta_especial_test)
add_test(interface interface_test)
add_test(jogador jogador_test)
add_test(mao mao_test)
add_test(partida partida_test)
add_test(pilha pilha_test)
add_test(util util_test)
add_library(uno SHARED src/carta.cpp src/carta_especial.cpp src/interface.cpp src/jogador.cpp src/mao.cpp src/partida.cpp src/pilha.cpp src/util.cpp)
set_target_properties(uno PROPERTIES VERSION ${PROJECT_VERSION})
set_target_properties(uno PROPERTIES SOVERSION ${PROJECT_VERSION})
set_target_properties(uno PROPERTIES PUBLIC_HEADER include/capi.h)
